--- a/index.html
+++ b/index.html
@@ -73,16 +73,8 @@
         </ul>
     </section>
 
-    <section id="screenshots">
-        <h2>Скриншоты</h2>
-        <p>Вот несколько изображений из игры (в реальности замените на настоящие скриншоты):</p>
-        <img src="https://via.placeholder.com/600x300?text=Скриншот+1:+Рыцарь+на+старте+уровня" alt="Скриншот 1">
-        <img src="https://via.placeholder.com/600x300?text=Скриншот+2:+Битва+со+слизнями" alt="Скриншот 2">
-        <img src="https://via.placeholder.com/600x300?text=Скриншот+3:+Финальный+уровень" alt="Скриншот 3">
-    </section>
-
     <section id="download">
-        <h2>Скачать игру</h2>
+        <a href="https://drive.google.com/file/d/1Gx2mM_pn-GcNSAiLm-uK-tpa8N1d9cxN/view?usp=sharing">Скачать игру</a>
         <p>UP! доступна для скачивания на платформе PC, размер файла около 200 МБ. Скачайте бесплатно с нашего сайта или из магазинов приложений!</p>
         <a href="#" style="background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Скачать для PC</a>
         <a href="#" style="background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; margin-left: 10px;">Скачать для Android</a>
