--- a/index.html
+++ b/index.html
@@ -62,7 +62,22 @@
         <h2>О игре</h2>
         <p>Добро пожаловать в мир игры UP! – динамичного платформера, где главный герой, храбрый рыцарь, стремится подняться до конца! Ваша цель – преодолевать уровни, полные ловушек, прыжков и секретов, чтобы достичь легендарного сокровища. Но будьте осторожны: на пути вас подстерегают скользкие слизни – опасные существа, которые могут убить вас. Игра сочетает в себе классический геймплей платформеров с фэнтезийными элементами, такими как сбор предметов и бонусы. UP! идеально подходит для любителей вызовов и тех, кто хочет провести время весело и активно.</p>
     </section>
-
+    <section>
+        <table>
+            <tr>
+                <td>Спидраннеры</td><td>Время</td>
+            </tr>
+            <tr>
+                <td>zzSERGzz</td><td>0:37</td>
+            </tr>
+            <tr>
+                <td>foxyk</td><td>0:58</td>
+            </tr>
+            <tr>
+                <td>KittyMoon</td><td>1:01</td>
+            </tr>
+        </table>
+    </section>
     <section id="gameplay">
         <h2>Геймплей</h2>
         <p>В UP! вы управляете рыцарем, который может прыгать, бегать и использовать гаджеты, чтобы преодолевать препятствия. Каждый уровень становится сложнее: от простых платформ до головоломок с гравитацией. Собирайте монеты, чтобы открывать новые способности, такие как двойной прыжок или щит от шипов. Особое внимание уделяйте слизням – они появляются внезапно и требуют осторожности: перепрыгивайте через них или используйте специальные атаки, чтобы их уничтожить. Игра имеет 10 уровней, разделенных на миры с уникальными темами – от мрачных подземелий до волшебных лесов.</p>
