--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
         <p>Добро пожаловать в мир игры UP! – динамичного платформера, где главный герой, храбрый рыцарь, стремится подняться до конца! Ваша цель – преодолевать уровни, полные ловушек, прыжков и секретов, чтобы достичь легендарного сокровища. Но будьте осторожны: на пути вас подстерегают скользкие слизни – опасные существа, которые могут убить вас. Игра сочетает в себе классический геймплей платформеров с фэнтезийными элементами, такими как сбор предметов и бонусы. UP! идеально подходит для любителей вызовов и тех, кто хочет провести время весело и активно.</p>
     </section>
     <section>
-        <table>
+        <table style="border: 1px solid black">
             <tr>
-                <td>Спидраннеры</td><td>Время</td>
+                <td style="border: 1px solid black">Спидраннеры</td><td>Время</td>
             </tr>
             <tr>
-                <td>zzSERGzz</td><td>0:37</td>
+                <td style="border: 1px solid black">zzSERGzz</td><td>0:37</td>
             </tr>
             <tr>
-                <td>foxyk</td><td>0:58</td>
+                <td style="border: 1px solid black">foxyk</td><td>0:58</td>
             </tr>
             <tr>
-                <td>KittyMoon</td><td>1:01</td>
+                <td style="border: 1px solid black">KittyMoon</td><td>1:01</td>
             </tr>
         </table>
     </section>
