--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
     <section>
         <table style="border: 1px solid black">
             <tr>
-                <td style="border: 1px solid black">Спидраннеры</td><td>Время</td>
+                <td style="border: 1px solid black">Спидраннеры</td><td style="border: 1px solid black">Время</td>
             </tr>
             <tr>
-                <td style="border: 1px solid black">zzSERGzz</td><td>0:37</td>
+                <td style="border: 1px solid black">zzSERGzz</td><td style="border: 1px solid black">0:37</td>
             </tr>
             <tr>
-                <td style="border: 1px solid black">foxyk</td><td>0:58</td>
+                <td style="border: 1px solid black">foxyk</td><td style="border: 1px solid black">0:58</td>
             </tr>
             <tr>
-                <td style="border: 1px solid black">KittyMoon</td><td>1:01</td>
+                <td style="border: 1px solid black">KittyMoon</td><td style="border: 1px solid black">1:01</td>
             </tr>
         </table>
     </section>
